--- a/templates/add.html
+++ b/templates/add.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block content %}
+{{ student }}
+<form action="" method="post">
+    {% csrf_token %}
+    {{ form.as_p }}<br/>
+    <input type="submit" value="Zastosuj"/>
+</form>
+{% endblock %}
