--- a/templates/all_user.html
+++ b/templates/all_user.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %} User {% endblock %}
+{% block content %}
+    {% for User in UserModel %}
+        <ul>
+            <tr><b>First name: </b></tr>
+                <li><p>{{ User.fisrt_name }}<p></li>
+            <tr><b>Last name: </b></tr>
+                <li><p>{{ User.last_name }}</p></li>
+            <tr><b>Phone number: </b></tr>
+                <li><p>{{ User.phone_number }}</p></li>
+            <tr><b>User type: </b></tr>
+                <li><p>{{ User.user_type }}</p></li>
+        </ul>
+    {% endfor %}
+{% endblock %}
