--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,39 @@
-<!DOCTYPE html>
+{% load static %}
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>DriverApp</title>
+    <link rel="stylesheet" href="{% static 'base.css' %}">
 </head>
 <body>
-$END$
+{% if user.is_authenticated %}
+        Hello {{ user.username.title }}
+        <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a href="{% url 'login' %}">Login</a>
+    {% endif %}
+        <h1><u>Transport</u></h1>
+        {% block title %}
+
+        {% endblock %}
+        {% block content %}
+
+        {% endblock %}
+    {% for message in messages %}
+        <p>{{ message }}</p>
+    {% endfor %}
+    {{ request.user }}
+    {{ request.user.is_authenticated }}
+
+
+<footer>
+    <strong>
+        <i>Today it's {{now}}</i>
+    </strong>
+</footer>
 </body>
 </html>
