--- a/templates/all_user.html
+++ b/templates/all_user.html
@@ -1,16 +1,26 @@
 {% extends 'base.html' %}
 {% block title %} User {% endblock %}
 {% block content %}
-    {% for User in UserModel %}
-        <ul>
-            <tr><b>First name: </b></tr>
-                <li><p>{{ User.fisrt_name }}<p></li>
-            <tr><b>Last name: </b></tr>
-                <li><p>{{ User.last_name }}</p></li>
-            <tr><b>Phone number: </b></tr>
-                <li><p>{{ User.phone_number }}</p></li>
-            <tr><b>User type: </b></tr>
-                <li><p>{{ User.user_type }}</p></li>
-        </ul>
-    {% endfor %}
+    <table class="table table-striped table-hover">
+        <thead class="table-dark">
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">First name</th>
+            <th scope="col">Last name</th>
+            <th scope="col">Phone number</th>
+            <th scope="col">User type</th>
+        </tr>
+        </thead>
+        <tbody class="table-group-divider">
+        {% for User in users %}
+            <tr class="table-activ">
+                <th scope="row">{{ User.pk }}</th>
+                <td>{{ User.first_name }}</td>
+                <td>{{ User.last_name }}</td>
+                <td>{{ User.username }}</td>
+                <td>{{ User.user_type }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
