--- a/templates/base.html
+++ b/templates/base.html
@@ -8,31 +8,36 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>DriverApp</title>
     <link rel="stylesheet" href="{% static 'base.css' %}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 <body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 {% if user.is_authenticated %}
-        Hello {{ user.username.title }}
-        <a href="{% url 'logout' %}">Logout</a>
-    {% else %}
-        <a href="{% url 'login' %}">Login</a>
-    {% endif %}
-        <h1><u>Transport</u></h1>
-        {% block title %}
+    Hello {{ user.username.title }}
+    <a href="{% url 'logout' %}">Logout</a>
+{% else %}
+    <a href="{% url 'login' %}">Login</a>
+{% endif %}
+<h1><u>Transport</u></h1>
+{% block title %}
 
-        {% endblock %}
-        {% block content %}
+{% endblock %}
+{% block content %}
 
-        {% endblock %}
-    {% for message in messages %}
-        <p>{{ message }}</p>
-    {% endfor %}
-    {{ request.user }}
-    {{ request.user.is_authenticated }}
+{% endblock %}
+{% for message in messages %}
+    <p>{{ message }}</p>
+{% endfor %}
+{{ request.user }}
+{{ request.user.is_authenticated }}
 
 
 <footer>
     <strong>
-        <i>Today it's {{now}}</i>
+        <i>Today it's {{ now }}</i>
     </strong>
 </footer>
 </body>
