--- a/templates/all_user.html
+++ b/templates/all_user.html
@@ -14,7 +14,7 @@
         <tbody class="table-group-divider">
         {% for User in users %}
             <tr class="table-activ">
-                <th scope="row">{{ User.pk }}</th>
+                <th scope="row">{{ User.length }}</th>
                 <td>{{ User.first_name }}</td>
                 <td>{{ User.last_name }}</td>
                 <td>{{ User.username }}</td>
