--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,17 +1,16 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-<form method="post">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">Login</button>
-</form>
-</body>
-</html>
+{% extends 'base.html' %}
+{% load bootstrap %}
+{% block content %}
+    <div class="col-auto center">
+    <div class="card card-center text-center" style="width: 27rem;">
+        <div class="card-body">
+            <h5 class="card-title">Login</h5>
+            <form method="post">
+                {% csrf_token %}
+                {{ form|bootstrap }}
+                <button type="submit">Login</button>
+            </form>
+        </div>
+    </div>
+    </div>
+{% endblock %}
