--- a/templates/all_address_from.html
+++ b/templates/all_address_from.html
@@ -1,25 +1,34 @@
 {% extends 'base.html' %}
-{% block title %} Address From {% endblock %}
+{% block title %} {{ name }} {% endblock %}
 {% block content %}
-{{ all_address_from }}
-    {% for companyFrom in all_address_from %}
-        <ul>
-            <tr><b>Company name: </b></tr>
-                <li><p>{{ companyFrom.company_name }}<p></li>
-            <tr><b>Country: </b></tr>
-                <li><p>{{ companyFrom.address_country }}</p></li>
-            <tr><b>City: </b></tr>
-                <li><p>{{ companyFrom.address_city }}</p></li>
-            <tr><b>Zip code: </b></tr>
-                <li><p>{{ companyFrom.address_zip_code }}</p></li>
-            <tr><b>Street: </b></tr>
-                <li><p>{{ companyFrom.address_street }}<p></li>
-            <tr><b>Property first: </b></tr>
-                <li><p>{{ companyFrom.address_property_first }}</p></li>
-            <tr><b>Property second: </b></tr>
-                <li><p>{{ companyFrom.address_property_second }}</p></li>
-            <tr><b>More info: </b></tr>
-                <li><p>{{ companyFrom.address_more_info }}</p></li>
-        </ul>
-    {% endfor %}
+    <table class="table table-striped table-hover">
+        <thead class="table-dark">
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Company name</th>
+            <th scope="col">Country</th>
+            <th scope="col">City</th>
+            <th scope="col">Zip code</th>
+            <th scope="col">Street</th>
+            <th scope="col">First line</th>
+            <th scope="col">Second line</th>
+            <th scope="col">More info</th>
+        </tr>
+        </thead>
+        <tbody class="table-group-divider">
+        {% for address in company %}
+            <tr class="table-active">
+                <th scope="row">{{ address.pk }}</th>
+                <td><a href="/driver/address_company_from/{{ address.pk }}/">{{ address.company_name }}</a></td>
+                <td>{{ address.address_country }}</td>
+                <td>{{ address.address_city }}</td>
+                <td>{{ address.address_zip_code }}</td>
+                <td>{{ address.address_street }}</td>
+                <td>{{ address.address_property_first }}</td>
+                <td>{{ address.address_property_second }}</td>
+                <td>{{ address.address_more_info }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
