--- a/templates/all_trailer.html
+++ b/templates/all_trailer.html
@@ -1,19 +1,28 @@
 {% extends 'base.html' %}
-{% block title %} Trailer {% endblock %}
+{% block title %} {{ name }} {% endblock %}
 {% block content %}
-    {{ all_trailer }}
-    {% for trailer in all_trailer %}
-        <ul>
-            <tr><b>Model: </b></tr>
-                <li><p>{{ trailer.model }}<p></li>
-            <tr><b>Number: </b></tr>
-                <li><p>{{ trailer.trailer_number }}</p></li>
-            <tr><b>Weighs: </b></tr>
-                <li><p>{{ trailer.weighs }}</p></li>
-            <tr><b>Can load: </b></tr>
-                <li><p>{{ trailer.tons_can_load }}</p></li>
-            <tr><b>Cargo space: </b></tr>
-                <li><p>{{ trailer.cargo_space }}<p></li>
-        </ul>
-    {% endfor %}
+    <table class="table table-striped table-hover">
+        <thead class="table-dark">
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Model</th>
+            <th scope="col">Number</th>
+            <th scope="col">Weighs</th>
+            <th scope="col">Can load</th>
+            <th scope="col">Cargo space</th>
+        </tr>
+        </thead>
+        <tbody class="table-group-divider">
+        {% for trailer in all_trailer %}
+            <tr class="table-activ">
+                <th scope="row">{{ trailer.pk }}</th>
+                <td>{{ trailer.model }}</td>
+                <td><a href="/driver/trailer/{{ trailer.pk }}/">{{ trailer.trailer_number }}</a></td>
+                <td>{{ trailer.weighs }} (kilograms)</td>
+                <td>{{ trailer.tons_can_load }} (kilograms)</td>
+                <td>{{ trailer.cargo_space }}</td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
