--- a/templates/base.html
+++ b/templates/base.html
@@ -15,28 +15,28 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-{% if user.is_authenticated %}
-    Hello {{ user_name.title }}
-    <a href="{% url 'logout' %}">Logout</a>
-{% else %}
-    <a href="{% url 'login' %}">Login</a>
-{% endif %}
-<h1><u>Transport</u></h1>
-{% block title %}
-
-{% endblock %}
-{% block content %}
-
-{% endblock %}
-{% for message in messages %}
-    <p>{{ message }}</p>
-{% endfor %}
-{{ request.user }}
-
-
+<div class="card text-center" style="width: auto;">
+    <div class="card-body">
+        {% for message in messages %}
+            <h5>{{ message }}</h5>
+        {% endfor %}
+        {% if user.is_authenticated %}
+            Hello {{ user }}<br>
+            <a href="{% url 'logout' %}">Logout</a>
+        {% else %}
+            <a href="{% url 'login' %}">Login</a>
+        {% endif %}
+        <h4><b>{{ name }}</b></h4>
+        {% block title %}
+        {% endblock %}
+        {% block content %}
+        {% endblock %}
+    </div>
+</div>
 <footer>
     <strong>
-        <i>Today it's {{ now }}</i>
+        <i>Today it's {{ now }}</i><br>
+        <b>{{ request.user }}</b>
     </strong>
 </footer>
 </body>
