--- a/templates/edit.html
+++ b/templates/edit.html
@@ -9,7 +9,7 @@
                 {% csrf_token %}
                 {{ form|bootstrap }}<br/>
                 <input type="submit" value="Send" class="btn btn-success" style="margin-top: 5px; margin-bottom: 5px;">
-                <input type="reset" value="Clear" class="btn btn-danger" style="margin-top: 5px; margin-bottom: 5px;">
+                <input type="reset" value="Reset" class="btn btn-danger" style="margin-top: 5px; margin-bottom: 5px;">
             </form>
             <input type="button" value="Back" class="btn btn-primary" onclick="history.back()">
         </div>
