--- a/templates/trailer_id.html
+++ b/templates/trailer_id.html
@@ -9,7 +9,6 @@
     <li><b>Model:</b> {{ trailer.model }}</li>
     <li><b>Weighs:</b> {{ trailer.weighs }} kilograms</li>
     <li><b>Tons can load:</b> {{ trailer.tons_can_load }} kilograms</li>
-    <li><b>Cargo space:</b> {{ trailer.cargo_space }}</li>
-    <li><b>Truck:</b><a href="/driver/car/{{ car.pk }}/"> {{ car_trailer_id }} {{ car }} {{ car.pk }}</a></li>
+    <li><b>Cargo space:</b> {{ trailer.cargo_space }} Euro pallets</li>
 </ul>
 {% endblock %}
