--- a/templates/car_id.html
+++ b/templates/car_id.html
@@ -6,6 +6,7 @@
         </div>
         <div>
             <a href="/driver/add/car/" class="btn btn-primary">Add</a>
+            <a href="/driver/edit/car/{{ car.pk }}" class="btn btn-primary">Add</a>
         </div>
         <li><b>Trailer Number:</b> {{ car.car_number }}</li>
         <li><b>Model:</b> {{ car.model }}</li>
